# rust-web

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  setup.sh
.github/workflows/: ci.yml
migrations/: 0001_init.sql
src/: auth.rs  cookies.rs  error.rs  handlers.rs  layout.rs  lib.rs  main.rs  pages.rs
src/models/: user.rs
src/static/: style.css
tests/: integration_test.rs
