[package]
name = "rust-web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
bcrypt = "0.19.2"
chrono = { version = "0.4.45", features = ["serde"] }
maud = {version = "0.27.0", features = ["axum"]}
serde = "1.0.228"
sqlx = { version = "0.9.0", features = ["migrate", "runtime-tokio", "sqlite"] }
tokio = {version = "1.52.3", features = ["macros", "rt-multi-thread"]}
tower-http = { version = "0.7", features = ["fs"] }
axum-extra = { version = "0.10", features = ["cookie", "cookie-signed", "cookie-private"]}
time = "0.3.49"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
