[package]
name = "rust-web-template"
version = "0.1.0"
edition = "2021"
description = "A Rust web application template"
license = "MIT"

[dependencies]
anyhow = "1"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie", "cookie-signed", "cookie-private"] }
bcrypt = "0.19"
chrono = { version = "0.4", features = ["serde"] }
maud = { version = "0.27", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.9", features = ["migrate", "runtime-tokio", "sqlite"] }
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.7", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]